samples/_failures_safe/1761687801_5c4fe8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0dca0d20.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_0dca0d20.c:172:39: error: missing terminating " character
  172 |         case TOKEN_IDENTIFIER: printf("IDENT
      |                                       ^~~~~~
./samples/SAFE/__tmp_0dca0d20.c:172:9: error: expected expression at end of input
  172 |         case TOKEN_IDENTIFIER: printf("IDENT
      |         ^~~~
./samples/SAFE/__tmp_0dca0d20.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0dca0d20.c:172:9: error: expected declaration or statement at end of input
